--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   firebase_core: ^2.24.2
   firebase_messaging: ^14.7.10
   flutter_local_notifications: ^16.3.2
+  firebase_analytics: ^10.7.4
+  firebase_crashlytics: ^3.4.8
   
   # Date & Time
   intl: ^0.19.0
